// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object literal 1`] = `
"\\"use strict\\";

function _objectEntries(obj) {
  var entries = [];
  var keys = Object.keys(obj);

  for (var k = 0; k < keys.length; ++k) entries.push([keys[k], obj[keys[k]]]);

  return entries;
}

_objectEntries({ a: 1, b: 2 });"
`;

exports[`object variable 1`] = `
"\\"use strict\\";

function _objectEntries(obj) {
  var entries = [];
  var keys = Object.keys(obj);

  for (var k = 0; k < keys.length; ++k) entries.push([keys[k], obj[keys[k]]]);

  return entries;
}

var obj = { a: 1, b: 2 };_objectEntries(obj);"
`;
